Update Angular and minor bugfixes

--- a/keyword-wrangler/src/frontend/app/keywords/partials/editor.html
+++ b/keyword-wrangler/src/frontend/app/keywords/partials/editor.html
@@ -17,4 +17,4 @@
   </form>
 </div>
 
-<div class="gridStyle" ng-grid="keywordsGridOptions"></div>
+<div class="gridStyle" ui-grid="keywordsGridOptions"></div>
