Edit, save, and delete bugfixes

--- a/keyword-wrangler/src/frontend/app/keywords/partials/operationsGridCell.html
+++ b/keyword-wrangler/src/frontend/app/keywords/partials/operationsGridCell.html
@@ -1,2 +1,2 @@
-<button class="btn btn-primary" ng-click="updateKeyword(row.entity)">Save</button>
-<button class="btn btn-warning" ng-click="deleteKeyword(row.entity)">Delete</button>
+<button class="btn btn-primary" ng-click="grid.appScope.updateKeyword(row.entity)">Save</button>
+<button class="btn btn-warning" ng-click="grid.appScope.deleteKeyword(row.entity)">Delete</button>
